--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>woodypaytest.github.io</title>
+  <title>tbwoody.github.io</title>
   <link rel="icon" href="/favicon.ico">
   <link rel="manifest" href="/manifest.json">
 </head>
