--- a/pr/bob/index.html
+++ b/pr/bob/index.html
@@ -12,10 +12,10 @@
     <h1>Bob Pay Test</h1>
     <p>This merchant accepts Bob Pay.</p>
     <p>Price: USD <strong>$55.00</strong></p>
-    <input type="checkbox" name="requestShipping" value="false">Request Shipping
-    <input type="checkbox" name="requestPayerEmail" value="false">Request Payer Email
-    <input type="checkbox" name="requestPayerPhone" value="false">Request Payer Phone
-    <input type="checkbox" name="requestPayerName" value="false">Request Payer Name
+    <input type="checkbox" name="requestShipping" value="false">Request Shipping <br>
+    <input type="checkbox" name="requestPayerEmail" value="false">Request Payer Email <br>
+    <input type="checkbox" name="requestPayerPhone" value="false">Request Payer Phone <br>
+    <input type="checkbox" name="requestPayerName" value="false">Request Payer Name <br>
     <p><button onclick="onBuyClicked()">Buy</button></p>
   </div>
   <pre id="msg"></pre>
