--- a/pr/bob/index.html
+++ b/pr/bob/index.html
@@ -12,6 +12,15 @@
     <h1>Bob Pay Test</h1>
     <p>This merchant accepts Bob Pay.</p>
     <p>Price: USD <strong>$55.00</strong></p>
+    <br><br><br>
+    
+    Item:<br>
+    <input type="text" name="itemName">
+    <br>
+    Price:<br>
+    <input type="text" name="itemPrice">
+    <br><br><br>
+    
     <input type="checkbox" name="requestShipping" value="false">Request Shipping <br>
     <input type="checkbox" name="requestPayerEmail" value="false">Request Payer Email <br>
     <input type="checkbox" name="requestPayerPhone" value="false">Request Payer Phone <br>
