--- a/pr/bob/index.html
+++ b/pr/bob/index.html
@@ -12,8 +12,9 @@
     <h1>Bob Pay Test</h1>
     <p>This merchant accepts Bob Pay.</p>
     <p>Price: USD <strong>$55.00</strong></p>
-    <br><br><br>
+    <br>
     
+    <p>You can add as many as items you want dynamically.</p>
     Item:<br>
     <input type="text" name="itemName">
     <br>
