--- a/pr/bob/index.html
+++ b/pr/bob/index.html
@@ -14,6 +14,17 @@
     <p>Price: USD <strong>$55.00</strong></p>
     <br>
     
+    <select name="CurrencyCode">
+    <option value="USD">USD</option>
+    <option value="INR">INR</option>
+    <option value="KRW">KRW</option>
+    <option value="EUR">EUR</option>
+    <option value="AUD">AUD</option>
+    <option value="JPY">JPY</option>
+    <option value="CNY">CNY</option>
+    <option value="GBP">GBP</option>
+    </select>
+    
     <p>You can add as many as items you want dynamically.</p>
     Item:<br>
     <input type="text" name="itemName">
