--- a/pr/bob/index.html
+++ b/pr/bob/index.html
@@ -32,6 +32,7 @@
     <br>
     Price:<br>
     <input type="text" name="itemPrice">
+    <button onclick="onBuyClicked()">Add Item</button>
     <br><br><br>
     
     <input type="checkbox" name="requestShipping" value="false">Request Shipping <br>
