--- a/pr/bob/index.html
+++ b/pr/bob/index.html
@@ -14,7 +14,7 @@
     <p>Price: USD <strong>$55.00</strong></p>
     <br>
     
-    <p>Please select currency code for this purchase.</p>
+    <h2><p>Please select currency code for this purchase.</p></h2>
     <select name="CurrencyCode">
     <option value="USD">USD</option>
     <option value="INR">INR</option>
