--- a/pr/bob/index.html
+++ b/pr/bob/index.html
@@ -11,17 +11,25 @@
   <div id="contents">
     <h1>Bob Pay Test</h1>
     <h2>Supported Instruments</h2>
-    <strong>Supported Methods</strong>
+    <strong>Supported Methods</strong><br>
     <input type="text" name="supportedMethods">
     <button onclick="onBuyClicked()">Add</button>
-    <br>
-    <strong>Merchant Data</strong>
+    <br><br>
+   
+    <strong>Merchant Data</strong><br>
+    productId:
     <input type="text" name="productId"><br>
+    merchantRefId:
     <input type="text" name="merchantRefId"><br>
+    orderNumber:
     <input type="text" name="orderNumber"><br>
+    paymentProtocol:
     <input type="text" name="paymentProtocol"><br>
+    isRecurring:
     <input type="text" name="isRecurring"><br>
+    merchantName:
     <input type="text" name="merchantName"><br>
+    billingAddressRequired:
     <input type="text" name="billingAddressRequired"><br>
     <input type="text" name="allowedCardBrand">
     <button onclick="onBuyClicked()">Add</button>
@@ -39,7 +47,7 @@
     <option value="CNY">CNY</option>
     <option value="GBP">GBP</option>
     </select>
-    <br>
+    <br><br>
     
     <strong>View and Add items</strong>
     Item:<br>
