--- a/pr/bob/index.html
+++ b/pr/bob/index.html
@@ -29,8 +29,8 @@
     <input type="text" name="isRecurring"><br>
     merchantName:
     <input type="text" name="merchantName"><br>
-    billingAddressRequired:
-    <input type="text" name="billingAddressRequired"><br>
+    <input type="checkbox" name="billingAddressRequired" value="false">Billing Address Required<br>
+    allowedCardBrand:
     <input type="text" name="allowedCardBrand">
     <button onclick="onBuyClicked()">Add</button>
     <br>
