--- a/pr/bob/index.html
+++ b/pr/bob/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 <body>
-  <div id="contents">
+  <div id="contents" style="overflow-y: scroll; height:400px;">
     <h1>Bob Pay Test</h1>
     <h2>Supported Instruments</h2>
     <strong>Supported Methods</strong><br>
