--- a/pr/bob/index.html
+++ b/pr/bob/index.html
@@ -12,7 +12,7 @@
     <h1>Bob Pay Test</h1>
     <h2>Supported Instruments</h2>
     <strong>Supported Methods</strong><br>
-    <input type="text" name="supportedMethods">
+    <input type="text" name="supportedMethods" value=getSupportedMethod()>
     <button onclick="onBuyClicked()">Add</button>
     <br><br>
    
