--- a/pr/bob/index.html
+++ b/pr/bob/index.html
@@ -38,7 +38,7 @@
     <input type="checkbox" name="billingAddressRequired" id="billingAddressRequired" value="false">IS Billing Address Required<br>
     <br>
     <button onclick="onAddMerchantDataClicked()">Add</button>
-    <br>
+    <br><br>
     
     <h2>Order Details</h2>
     <strong>Currency Code</strong>
@@ -61,6 +61,7 @@
     Price:<br>
     <input type="text" name="itemPrice" id="itemPrice">
     <button onclick="onAddItemClicked()">Add</button>
+    <button onclick="onClearItemClicked()">Clear All</button>
     <br><br>
     
     <ul id="orderItemsList" style="list-style-type:none">
