--- a/pr/bob/index.html
+++ b/pr/bob/index.html
@@ -38,6 +38,7 @@
     <input type="checkbox" name="billingAddressRequired" id="billingAddressRequired" value="false">IS Billing Address Required<br>
     <br>
     <button onclick="onAddMerchantDataClicked()">Add</button>
+    <button onclick="onClearDataClicked()">Clear All</button>
     <br><br>
     
     <h2>Order Details</h2>
