--- a/pr/bob/index.html
+++ b/pr/bob/index.html
@@ -34,8 +34,8 @@
     <input type="text" name="merchantName" id="merchantName"><br>
     cardBrand:
     <input type="text" name="allowedCardBrand" id="allowedCardBrand"><br>
-    <input type="checkbox" name="isRecurring" id="isRecurring"  value="false">IS Recurring<br>
-    <input type="checkbox" name="billingAddressRequired" id="billingAddressRequired" value="false">IS Billing Address Required<br>
+    <input type="checkbox" name="isRecurring" id="isRecurring">IS Recurring<br>
+    <input type="checkbox" name="billingAddressRequired" id="billingAddressRequired">IS Billing Address Required<br>
     <br>
     <button onclick="onAddMerchantDataClicked()">Add</button>
     <button onclick="onClearDataClicked()">Clear All</button>
