--- a/pr/bob/index.html
+++ b/pr/bob/index.html
@@ -12,7 +12,7 @@
     <h1>Bob Pay Test</h1>
     <h2>Supported Instruments</h2>
     <strong>Supported Methods</strong><br>
-    <input type="text" name="supportedMethods" id="supportedMethods">
+    <input type="url" name="supportedMethods" id="supportedMethods">
     <button onclick="onAddMethodClicked()">Add</button>
     <button onclick="onClearMethodClicked()">Clear All</button>
     <br>
