--- a/pr/bob/index.html
+++ b/pr/bob/index.html
@@ -23,18 +23,18 @@
    
     <strong>Merchant Data</strong><br>
     productId:
-    <input type="text" name="productId" id="productId"><br>
+    <input type="text" name="productId" id="productId"><br><br>
     merchantRefId:
-    <input type="text" name="merchantRefId" id="merchantRefId"><br>
+    <input type="text" name="merchantRefId" id="merchantRefId"><br><br>
     orderNumber:
-    <input type="text" name="orderNumber" id="orderNumber"><br>
+    <input type="text" name="orderNumber" id="orderNumber"><br><br>
     paymentProtocol:
-    <input type="text" name="paymentProtocol" id="paymentProtocol"><br>
+    <input type="text" name="paymentProtocol" id="paymentProtocol"><br><br>
     merchantName:
-    <input type="text" name="merchantName" id="merchantName"><br>
+    <input type="text" name="merchantName" id="merchantName"><br><br>
     cardBrand:
-    <input type="text" name="allowedCardBrand" id="allowedCardBrand"><br>
-    <input type="checkbox" name="isRecurring" id="isRecurring">IS Recurring<br>
+    <input type="text" name="allowedCardBrand" id="allowedCardBrand"><br><br>
+    <input type="checkbox" name="isRecurring" id="isRecurring">IS Recurring<br><br>
     <input type="checkbox" name="billingAddressRequired" id="billingAddressRequired">IS Billing Address Required<br>
     <br>
     <button onclick="onAddMerchantDataClicked()">Add</button>
