--- a/pr/bob/index.html
+++ b/pr/bob/index.html
@@ -33,6 +33,11 @@
     merchantName:
     <input type="text" name="merchantName" id="merchantName"><br><br>
     cardBrand:
+    <input type="checkbox" name="VI" id="VI">VI
+    <input type="checkbox" name="MC" id="MC">MC
+    <input type="checkbox" name="AX" id="AX">AX
+    <input type="checkbox" name="DS" id="DS">DS
+    
     <input type="text" name="allowedCardBrand" id="allowedCardBrand"><br><br>
     <input type="checkbox" name="isRecurring" id="isRecurring">IS Recurring<br><br>
     <input type="checkbox" name="billingAddressRequired" id="billingAddressRequired">IS Billing Address Required<br>
