--- a/pr/bob/index.html
+++ b/pr/bob/index.html
@@ -32,11 +32,11 @@
     <input type="text" name="paymentProtocol" id="paymentProtocol"><br><br>
     merchantName:
     <input type="text" name="merchantName" id="merchantName"><br><br>
-    cardBrand:
+    allowedCards:
     <input type="checkbox" name="VI" id="VI">VI
     <input type="checkbox" name="MC" id="MC">MC
     <input type="checkbox" name="AX" id="AX">AX
-    <input type="checkbox" name="DS" id="DS">DS
+    <input type="checkbox" name="DS" id="DS">DS<br><br>
     
     <input type="text" name="allowedCardBrand" id="allowedCardBrand"><br><br>
     <input type="checkbox" name="isRecurring" id="isRecurring">IS Recurring<br><br>
