--- a/pr/bob/index.html
+++ b/pr/bob/index.html
@@ -73,10 +73,10 @@
     </ul> 
     
     <h2>Payment Options</h2>
-    <input type="checkbox" name="requestShipping" value="false">Request Shipping <br>
-    <input type="checkbox" name="requestPayerEmail" value="false">Request Payer Email <br>
-    <input type="checkbox" name="requestPayerPhone" value="false">Request Payer Phone <br>
-    <input type="checkbox" name="requestPayerName" value="false">Request Payer Name <br>
+    <input type="checkbox" name="requestShipping"  id="requestShipping">Request Shipping <br>
+    <input type="checkbox" name="requestPayerEmail"  id="requestPayerEmail">Request Payer Email <br>
+    <input type="checkbox" name="requestPayerPhone"  id="requestPayerPhone">Request Payer Phone <br>
+    <input type="checkbox" name="requestPayerName"  id="requestPayerName">Request Payer Name <br>
     <p><button onclick="onBuyClicked()">Buy</button></p>
   </div>
   <pre id="msg"></pre>
