--- a/pr/bob/index.html
+++ b/pr/bob/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div id="contents" style="overflow-y:scroll; overflow-x:hidden; height:400px;">
-    <h1>Bob Pay Test</h1>
+    <h1>Woody Pay Test</h1>
     <h2>Supported Instruments</h2>
     <strong>Supported Methods</strong><br>
     <input type="url" name="supportedMethods" id="supportedMethods">
@@ -47,7 +47,7 @@
     
     <h2>Order Details</h2>
     <strong>Currency Code</strong>
-    <select name="CurrencyCode">
+    <select name="CurrencyCode" id="CurrencyCode">
     <option value="USD">USD</option>
     <option value="INR">INR</option>
     <option value="KRW">KRW</option>
