--- a/pr/bob/index.html
+++ b/pr/bob/index.html
@@ -77,7 +77,7 @@
       <input type="checkbox" name="requestPayerEmail"  id="requestPayerEmail">Request Payer Email <br>
       <input type="checkbox" name="requestPayerPhone"  id="requestPayerPhone">Request Payer Phone <br>
       <input type="checkbox" name="requestPayerName"  id="requestPayerName">Request Payer Name <br>
-      <p><button onclick="onBuyClicked()">Buy</button></p>
+      <p><button onclick="onBuyClicked()" width:40px; height:40px;>Buy</button></p>
   </div>
   <pre id="msg"></pre>
   <script src="../util.js"></script>
