--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   <ul>
     <li><a href="pr/bob/">Bob Pay</a></li>
+    <li><a href="pr/iframe/">IFrame</a></li>
   </ul>
   <script src="/redirect.js"></script>
 </body>
