--- a/pr/iframe/index.html
+++ b/pr/iframe/index.html
@@ -12,7 +12,7 @@
   <div id="contents">
     <h1>IFrame Test</h1>
     <p>This iframe is allowed to request payments:</p>
-    <iframe src="https://tbwoody.github.io/pr/bob/index.html" allowpaymentrequest></iframe>
+    <iframe src="https://tbwoody.github.io/woodypaytest/pr/bob/index.html" allowpaymentrequest></iframe>
     <p>This iframe is not allowed to request payments:</p>
     <iframe src="https://tbwoody.github.io/pr/iframe/child.html"></iframe>
   </div>
