--- a/pr/iframe/index.html
+++ b/pr/iframe/index.html
@@ -14,7 +14,7 @@
     <p>This iframe is allowed to request payments:</p>
     <iframe src="https://tbwoody.github.io/woodypaytest/pr/iframe/child.html" allowpaymentrequest></iframe>
     <p>This iframe is not allowed to request payments:</p>
-    <iframe src="https://tbwoody.github.io/pr/iframe/child.html"></iframe>
+    <iframe src="https://tbwoody.github.io/woodypaytest/pr/iframe/child.html"></iframe>
   </div>
 </body>
 </html>
