--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <li><a href="pr/iframe/">IFrame</a></li>
   </ul>
   <script src="/redirect.js"></script>
+  <a href="intent://samsung/#Intent;scheme=spay;package=com.samsung.android.spay;S.checkoutid=123;end">helllo</a>
 </body>
 </html>
