--- a/pr/bob/index.html
+++ b/pr/bob/index.html
@@ -61,6 +61,9 @@
 
       <strong>View and Add items</strong><br>
       Item:<br>
+      <input type="text" name="itemTotal" id="itemTotal">
+      <br>
+      Item:<br>
       <input type="text" name="itemName" id="itemName">
       <br>
       Price:<br>
