--- a/pr/bob/index.html
+++ b/pr/bob/index.html
@@ -60,7 +60,7 @@
       <br><br>
 
       <strong>View and Add items</strong><br>
-      Item:<br>
+      Total Amount:<br>
       <input type="text" name="itemTotal" id="itemTotal">
       <br>
       Item:<br>
