--- a/pr/bob/index.html
+++ b/pr/bob/index.html
@@ -61,7 +61,7 @@
 
       <strong>View and Add items</strong><br>
       Total Amount:<br>
-      <input type="text" name="itemTotal" id="itemTotal">
+      <input type="text" name="itemTotalEdit" id="itemTotalEdit">
       <br>
       Item:<br>
       <input type="text" name="itemName" id="itemName">
