--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
   <ul>
-    <li><a href="pr/bob/">Bob Pay</a></li>
-    <li><a href="pr/iframe/">IFrame</a></li>
+    <li><a href="pr/bob/">WoodyPay Normal</a></li>
+    <li><a href="pr/iframe/">WoodyPay IFrame</a></li>
   </ul>
   <script src="/redirect.js"></script>
 </body>
