--- a/pr/bob/index.html
+++ b/pr/bob/index.html
@@ -32,6 +32,8 @@
       <input type="text" name="paymentProtocol" id="paymentProtocol"><br><br>
       merchantName:
       <input type="text" name="merchantName" id="merchantName"><br><br>
+      debugKey:
+      <input type="text" name="debugKey" id="debugKey"><br><br>
       allowedCards:
       <input type="checkbox" name="VI" id="VI">VI
       <input type="checkbox" name="MC" id="MC">MC
