--- a/pr/bob/index.html
+++ b/pr/bob/index.html
@@ -42,6 +42,7 @@
 
       <input type="checkbox" name="isRecurring" id="isRecurring">IS Recurring<br><br>
       <input type="checkbox" name="billingAddressRequired" id="billingAddressRequired">IS Billing Address Required<br>
+      <input type="checkbox" name="cardHolderNameRequired" id="cardHolderNameRequired">IS Card Holder Name Required<br>
       <br>
       <button onclick="onAddMerchantDataClicked()">Add</button>
       <button onclick="onClearDataClicked()">Clear All</button>
