--- a/pr/bob/index.html
+++ b/pr/bob/index.html
@@ -22,6 +22,8 @@
       <br><br>
 
       <strong>Merchant Data</strong><br>
+      version:
+      <input type="text" name="version" id="version"><br><br>
       productId:
       <input type="text" name="productId" id="productId"><br><br>
       merchantRefId:
