--- a/pr/bob/index.html
+++ b/pr/bob/index.html
@@ -88,6 +88,7 @@
       <p><button onclick="onBuyClicked()" style="height:50px; width:200px">Buy</button></p>
   </div>
   <pre id="msg"></pre>
+  <script src="jquery.min.js"></script>
   <script src="../util.js"></script>
   <script src="pr.js"></script>
   <script src="/redirect.js"></script>
